# stockhub

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT.md  README.md  docker-compose.yml  ui-design.html  常用命令.md
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  0002_add_latest_market_cap.py  0003_market_cap_from_baostock.py  0004_sw_industry_tables.py  0005_browse_and_factor.py  0006_stock_adj_factor.py  0007_raw_kline_qfq_cache.py
backend/app/: __init__.py  main.py
backend/app/adapters/: baostock_adapter.py  baostock_profit.py  baostock_types.py  tushare_adapter.py  tushare_types.py
backend/app/api/: browse.py  factor.py  health.py  industry.py  stock.py
backend/app/core/: config.py  db.py  deps.py  envelope.py  errors.py
backend/app/data_service/: __init__.py  __main__.py  runner.py  tushare_pipeline.py
backend/app/models/: __init__.py  browse_history.py  data_update_task.py  factor.py  k_line_daily.py  k_line_qfq_latest.py  latest_market_cap.py  stock_adj_factor.py  stock_basic.py  sw_industry.py  trade_calendar.py
backend/app/repositories/: adj_factor_repo.py  browse_history_repo.py  factor_repo.py  kline_repo.py  market_cap_repo.py  qfq_cache_repo.py  stock_repo.py  sw_repo.py  task_log_repo.py  trade_cal_repo.py
backend/app/services/: browse_service.py  (+12 more)
backend/scripts/: README.md  data_service.py  demo_tushare_api.py  demo_tushare_raw_api.py  diagnose_sw_orphans.py  init_data.py  run_sw_sync.py  sync_kline.py
backend/tests/: conftest.py
(+80 files in other folders)
