[project]
name = "istock-backend"
version = "0.1.0"
description = "istock v1 backend — A-share quantitative analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10",
    "baostock>=0.8.9",
    "tushare>=1.4",
    "pandas>=2.2",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "faker>=24.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501 — long lines are OK.
# RUF001/002/003 — ambiguous unicode chars. We use CJK punctuation on purpose in docstrings/comments.
# B008 — `Depends()` in defaults is FastAPI's canonical style; not a bug.
ignore = ["E501", "RUF001", "RUF002", "RUF003", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests hitting real external services / database",
]
addopts = "-ra"
